# Anthtropomorphic-robot-arm-control-Project

./: README.md
antropomorphic_project/: CMakeLists.txt  package.xml  setup.py
antropomorphic_project/scripts/: ellipsoidal_motion.py
antropomorphic_project/src/antromorphic_project/: generate_matrixes.py  rviz_marker.py
antropomorphic_project/src/antropomorphic_project/: antropomorphic_end_effector_mover.py  fk_antropomorphic_arm.py  generate_matrixes.py  ik_antropomorphic_arm.py  move_joints.py
planar_3dof_control/: CMakeLists.txt  package.xml  setup.py
planar_3dof_control/config/: planar_3dof_control.yaml
planar_3dof_control/launch/: planar_3dof_control.launch  planar_3dof_ee_tf_listener.launch  planar_3dof_rqt.launch  planar_3dof_rqt.perspective
planar_3dof_control/msg/: EndEffector.msg
planar_3dof_control/scripts/: circular_motion_ee.py  planar_end_effector_mover.py  tf_listener.py
planar_3dof_control/src/planar_3dof_control/: move.py  rviz_marker.py
planar_3dof_control/src/planar_3dof_control/planar_arm_3DF/: fk_planar_arm.py  planar_arm_homogeneous_matrix.py  planar_homogeneous.py  planar_inverse_kinematics.py  planar_inverse_kinematics_end_effector.py  sympi_basics.py
